syntax = "proto3";

package io.leishi.genshin.proto;

enum Set {
    SET_UNSPECIFIED = 0;
    ARCHAIC_PETRA = 1;
    BERSERKER = 2;
    BLIZZARD_STRAYER = 3;
    BLOODSTAINED_CHIVALRY = 4;
    BRAVE_HEART = 5;
    CRIMSON_WITCH_OF_FLAMES = 6;
    DEEPWOOD_MEMORIES = 7;
    DEFENDERS_WILL = 8;
    DESERT_PAVILION_CHRONICLE = 9;
    ECHOES_OF_AN_OFFERING = 10;
    EMBLEM_OF_SEVERED_FATE = 11;
    FLOWER_OF_PARADISE_LOST = 12;
    GAMBLER = 13;
    GILDED_DREAMS = 14;
    GLADIATORS_FINALE = 15;
    HEART_OF_DEPTH = 16;
    HUSK_OF_OPULENT_DREAMS = 17;
    INSTRUCTOR = 18;
    LAVAWALKER = 19;
    MAIDEN_BELOVED = 20;
    MARTIAL_ARTIST = 21;
    NOBLESSE_OBLIGE = 22;
    OCEAN_HUED_CLAM = 23;
    PALE_FLAME = 24;
    PRAYERS_FOR_DESTINY = 25;
    PRAYERS_FOR_ILLUMINATION = 26;
    PRAYERS_FOR_WISDOM = 27;
    PRAYERS_TO_SPRINGTIME = 28;
    RESOLUTION_OF_SOJOURNER = 29;
    RETRACING_BOLIDE = 30;
    SCHOLAR = 31;
    SHIMENAWAS_REMINISCENCE = 32;
    TENACITY_OF_THE_MILLELITH = 33;
    THE_EXILE = 34;
    THUNDERING_FURY = 35;
    THUNDERSOOTHER = 36;
    TINY_MIRACLE = 37;
    VERMILLION_HEREAFTER = 38;
    VIRIDESCENT_VENERER = 39;
    WANDERERS_TROUPE = 40;
    NYMPHS_DREAM = 41;
    VOURUKASHAS_GLOW = 42;
    GOLDEN_TROUPE = 43;
    MARECHAUSSEE_HUNTER = 44;
    SONG_OF_DAYS_PAST = 45;
    NIGHTTIME_WHISPERS_IN_THE_ECHOING_WOODS = 46;
    ADVENTURER = 47;
    LUCKY_DOG = 48;
    TRAVELING_DOCTOR = 49;
    FRAGMENT_OF_HARMONIC_WHIMSY = 50;
    UNFINISHED_REVERIE = 51;
}
